--- a/Hobbies.html
+++ b/Hobbies.html
@@ -10,9 +10,10 @@
   <h3>Hobbies</h3>
   <hr>
   <ol>
-    <li>Youtuber video</li>
-    <li>Ballet Dance</li>
+    <li>Dancing</li>
+    <li>Singing</li>
     <li>Sledging in winter</li>
+    <li>Cycling</li>
 
   </ol>
 
