--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Akshara's Personal Site</title>
 </head>
 
-<body>
+<body style="background-color: powderblue;">
   <img src="Images/circle-cropped.png" alt="Akshara Profile pic">
   <h1>Akshara Gogula</h1>
 
@@ -14,14 +14,14 @@
   <p>Studying with passion the subjects taught in the class. My favorite subjects comprise <em>Mathematics</em> and <em>English</em></p>
 
 
-<hr>
-<h3>Skills</h3>
-<table>
-  <tr>
-    <td>Scratch</td>
-    <td>3/5</td>
-  </tr>
-</table>
+  <hr>
+  <h3>Skills</h3>
+  <table>
+    <tr>
+      <td>Scratch</td>
+      <td>3/5</td>
+    </tr>
+  </table>
 
 
   <hr>
